WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159054
WebRTC: Align 'update ICE connection/gathering state' steps with the WebRTC 1.0 specification
https://bugs.webkit.org/show_bug.cgi?id=159054
Summary
WebRTC: Align 'update ICE connection/gathering state' steps with the WebRTC 1...
Adam Bergkvist
Reported
2016-06-23 00:34:04 PDT
The 'update ICE connection/gathering state' steps should abort if the RTCPeerConnection is closed or if the new state is the same as the current state as specified in [1]. [1]
https://w3c.github.io/webrtc-pc/archives/20160513/webrtc.html#update-ice-gathering-state
Attachments
Proposed patch
(2.39 KB, patch)
2016-06-23 00:49 PDT
,
Adam Bergkvist
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Bergkvist
Comment 1
2016-06-23 00:49:10 PDT
Created
attachment 281901
[details]
Proposed patch
Eric Carlson
Comment 2
2016-06-23 06:17:31 PDT
Comment on
attachment 281901
[details]
Proposed patch Is it possible to test this?
Adam Bergkvist
Comment 3
2016-06-23 06:40:37 PDT
(In reply to
comment #2
)
> Comment on
attachment 281901
[details]
> Proposed patch > > Is it possible to test this?
Not currently. I thought I could produce double icegatheringstatechange events by setting the same offer twice with setLocalDescription(), but the state is only updated if the current state is 'new' (in accordance with the spec). We can probably hit one of the checks added by this change when we have the ICE-related callbacks from the WebRTC backend implemented.
Adam Bergkvist
Comment 4
2016-06-23 07:50:36 PDT
Comment on
attachment 281901
[details]
Proposed patch Thanks Eric
WebKit Commit Bot
Comment 5
2016-06-23 08:10:59 PDT
Comment on
attachment 281901
[details]
Proposed patch Clearing flags on attachment: 281901 Committed
r202378
: <
http://trac.webkit.org/changeset/202378
>
WebKit Commit Bot
Comment 6
2016-06-23 08:11:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug