WebRTC: Align 'update ICE connection/gathering state' steps with the WebRTC 1.0 specification https://bugs.webkit.org/show_bug.cgi?id=159054

Reviewed by Eric Carlson.

Add checks for same state and closed RTCPeerConnection in the 'update ICE connection state'
and 'update ICE gathering state' routines as described in [1].

[1] https://w3c.github.io/webrtc-pc/archives/20160513/webrtc.html#update-ice-gathering-state

No change in current behavior.

* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::updateIceGatheringState):
(WebCore::RTCPeerConnection::updateIceConnectionState):


Canonical link: https://commits.webkit.org/177144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202378 268f45cc-cd09-0410-ab3c-d52691b4dbfc